Remove confirm details screen unless P5

--- a/app/views/discovery-2023/create-account/otp.html
+++ b/app/views/discovery-2023/create-account/otp.html
@@ -58,7 +58,7 @@ Check your phone
           <input class="nhsuk-input nhsuk-input--width-10" id="securityCodes" name="code" type="number" aria-describedby="securityCodes" autocomplete="off" pattern="[0-9]*" value="" style="margin-bottom: 8px;">
         </div>
 
-        <a href="confirm-my-details" role="button" draggable="false" class="nhsuk-button">
+        <a href="password-set" role="button" draggable="false" class="nhsuk-button">
           Continue
         </a>
 
