--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -35,27 +35,20 @@
           <p class="nhsuk-body">If you cannot remember your password you can <a href="/nhslogin/login/check-your-email">reset it</a>.</p>
         <div>
 
-          {% if data.device === 'unknown' %}
+          {% if data.userIs === 'nothing' %}
 
-              {% if data.landlineMFA === 'primary' %}
-              <button data-redirect="/nhslogin/login/login-get-call-landline" class="nhsuk-button full-width" type="submit" id="button--save">
-              
-              {% elif data.passkeyMFA === 'primary' %}
-              <button data-redirect="/nhslogin/login/login-get-call-landline" class="nhsuk-button full-width" type="submit" id="button--save">
+    
+          <button data-redirect="confirm-my-details" class="nhsuk-button full-width" type="submit" id="button--save">
 
-              {% else %}
-              <button data-redirect="/nhslogin/login/login-enter-OTP" class="nhsuk-button full-width" type="submit" id="button--save">
-              
-              {% endif %}
+      
+          {% elif %}
 
-          {% else %}
+          <button data-redirect="spinner-confirm" class="nhsuk-button full-width" type="submit" id="button--save"></button>
 
-    <button data-redirect="confirm-my-details" class="nhsuk-button full-width" type="submit" id="button--save">
+          {% endif %}
 
-      {% endif %}
-
-    Continue
-    </button>
+          Continue
+          </button>
 
 
         </div>
