Remove confirm details opt for now

--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -35,7 +35,7 @@
           <p class="nhsuk-body">If you cannot remember your password you can <a href="/nhslogin/login/check-your-email">reset it</a>.</p>
         <div>
 
-          {% if data.userIs === 'nothing' %}
+          <!--{% if data.userIs === 'nothing' %}
 
     
           <button data-redirect="confirm-my-details" class="nhsuk-button full-width" type="submit" id="button--save">
@@ -43,11 +43,15 @@
       
           {% elif %}
 
-          <button data-redirect="spinner-confirm" class="nhsuk-button full-width" type="submit" id="button--save"></button>
+          <button data-redirect="spinner-confirm" class="nhsuk-button full-width" type="submit" id="button--save">
 
           {% endif %}
 
           Continue
+          </button>-->
+
+          <button data-redirect="spinner-confirm" class="nhsuk-button full-width" type="submit" id="button--save">
+            Continue
           </button>
 
 
