Steps page added, OTP content update

--- a/app/views/discovery-2023/email/existing-account-recovery.html
+++ b/app/views/discovery-2023/email/existing-account-recovery.html
@@ -34,7 +34,7 @@ Account details reminder from NHS login
         If you have technical issues, visit the NHS login help centre: <a href="https://help.login.nhs.uk/">https://help.login.nhs.uk/</a>
       </p>
 
-      <!--<p class="nhsuk-body">This invitation will expire on 20 March 2023.</p>-->
+      <!--<p class="nhsuk-body">This invitation will expire in 7 days.</p>-->
       
       
         <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
