--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -48,21 +48,9 @@ Finish settingt up your NHS login
         We need to send a 6 digit security code to the mobile phone number you used to register with your GP.
       </p>
 
-      <p class="nhsuk-body">You will also need to confirm your:
-        <ul class="nhsuk-list nhsuk-list--bullet">
-          <li>
-            name
-          </li>
-          <li>
-            date of birth
-          </li>
-          <li>
-            NHS number
-          </li>
-        </ul>
-      </p>
+      <p class="nhsuk-body">You need to confirm your details.</p>
 
-      <p class="nhsuk-body">This invitation will expire on 20 March 2023.</p>
+      <p class="nhsuk-body">This invitation will expire in 7 days.</p>
       
       <a href="../existing-uplift/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
       <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://settings.login.nhs.uk/</a></p>
