--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -27,9 +27,11 @@ Check your phone
   
     <div class="nhsuk-grid-column-two-thirds">
     
-        <h1 class="nhsuk-heading-l">Check your phone</h1>
+        <h1 class="nhsuk-heading-l">Enter the 6 digit security code</h1>
 
-        <p class="nhsuk-body">Enter the 6 digit security code that we have sent to <strong>•••••••8209</strong>.</p>
+        <p class="nhsuk-body">We need to confirm it's you before you access your NHS login.</p>
+
+        <p class="nhsuk-body">We have sent a text to <strong>•••••••8209</strong>.</p>
 
         <p class="nhsuk-body">This is the phone number that is registered with your GP surgery.</p>
 
@@ -58,7 +60,7 @@ Check your phone
           <input class="nhsuk-input nhsuk-input--width-10" id="securityCodes" name="code" type="number" aria-describedby="securityCodes" autocomplete="off" pattern="[0-9]*" value="" style="margin-bottom: 8px;">
         </div>
 
-        <a href="login-enter-password" role="button" draggable="false" class="nhsuk-button">
+        <a href="steps?userIs=p5" role="button" draggable="false" class="nhsuk-button">
           Continue
         </a>
 
