--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -7,6 +7,7 @@
 @import 'components/list-border';
 @import 'components/spinner';
 @import 'components/button-spinner';
+@import 'components/steps';
 
 
 ///////////////////////////////////////////
