--- a/app/views/discovery-2023/existing-uplift/spinner-set-up.html
+++ b/app/views/discovery-2023/existing-uplift/spinner-set-up.html
@@ -3,13 +3,13 @@
 {% from 'back-link/macro.njk' import backLink %}
 
 {% block pageTitle %}
-  Getting your invite
+Checking details
 {% endblock %}
 
 {% block content %}
   <div class="nhsuk-grid-row">
       <div class="nhsuk-width-container">
-         <h1 class="nhsuk-heading-l">Setting up your NHS login account</h1>
+         <h1 class="nhsuk-heading-l">Checking details</h1>
      
       <form action="auth" method="post">
         <section class="loading-container" id="gp-connect-0" style="display:block; min-height: 16em;">
