Tab tidy and email "why" content

--- a/app/views/discovery-2023/create-account/otp.html
+++ b/app/views/discovery-2023/create-account/otp.html
@@ -8,8 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-Check your phone
-
+Enter the 6 digit security code
 {% endblock %}
 
 {% block topRow %}
