--- a/app/views/discovery-2023/create-account/steps.html
+++ b/app/views/discovery-2023/create-account/steps.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  Set up a new NHS login
+Confirm your details
 {% endblock %}
 
 {% block content %}
