--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -1,7 +1,7 @@
 {% extends '../layouts/layout-email.html' %}
 
 {% block pageTitle %}
-Finish settingt up your NHS login
+Finish setting up your NHS login
 {% endblock %}
 
 {% block content %}
@@ -20,7 +20,7 @@ Finish settingt up your NHS login
         Your GP has linked your NHS record to your account.
       </p>
       <p>
-        When you've finished setting up your account you will have full access to services that use NHS login.
+        Your GP has recommended that you set up an NHS login so you can access a health service or app. When you've finished setting up your account you will have full access to services that use NHS login.
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
