--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -21,7 +21,7 @@
       </p>
       
       <p class="nhsuk-body">
-        Your account allows you to access a range of health and care websites and apps with one set of login details.
+        Your GP has recommended that you set up an NHS login so you can access a health service or app.
       </p>
 
       <h2 class="nhsuk-heading-m">
