--- a/app/views/discovery-2023/create-account/confirm-my-details.html
+++ b/app/views/discovery-2023/create-account/confirm-my-details.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-What is your date of birth?
+Confirm your details
 {% endblock %}
 
 {% block content %}
