--- a/app/views/discovery-2023/existing-uplift/spinner-confirm.html
+++ b/app/views/discovery-2023/existing-uplift/spinner-confirm.html
@@ -3,7 +3,7 @@
 {% from 'back-link/macro.njk' import backLink %}
 
 {% block pageTitle %}
-  Getting your invite
+Confirming your details
 {% endblock %}
 
 {% block content %}
