Small content change

--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -16,11 +16,8 @@ Finish setting up your NHS login
         Dear {{ data.UserFirstName or 'Alex' }} {{ data.UserLastName or 'Taylor' }},
       </p>
 
-      <p class="nhsuk-body">
-        Your GP has linked your NHS record to your account.
-      </p>
       <p>
-        Your GP has recommended that you set up an NHS login so you can access a health service or app. When you've finished setting up your account you will have full access to services that use NHS login.
+        Your GP has recommended that you finish setting up an NHS login so you can have full access to services that use NHS login.
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
