Some content considerations (review after UX rejig)

--- a/app/views/discovery-2023/create-account/success.html
+++ b/app/views/discovery-2023/create-account/success.html
@@ -49,7 +49,7 @@ You have set up an NHS login
           Other digital health and care services
         </h2>
         <p>
-          You can also use your NHS login to access lots of other digital health and care services that are commissioned by the NHS.
+          You can also use your NHS login to access a service your GP has recommended and other digital health and care services commissioned by the NHS.
         </p>
 
         <div class="nhsuk-action-link">
