--- a/app/views/discovery-2023/email/existing-account-recovery.html
+++ b/app/views/discovery-2023/email/existing-account-recovery.html
@@ -8,9 +8,9 @@ Account details reminder from NHS login
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <h1 class="nhsuk-heading-l">
-        Account details reminder from NHS login
-      </h1>
+      <h2 class="nhsuk-heading-m">
+        Subject: Account details reminder from NHS login
+      </h2>
 
       <p class="nhsuk-body">
         Dear {{ data.UserFirstName or 'Alex' }} {{ data.UserLastName or 'Taylor' }},
