--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -8,9 +8,9 @@ Finish setting up your NHS login
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <h1 class="nhsuk-heading-l">
-        Finish setting up your NHS login
-      </h1>
+      <h2 class="nhsuk-heading-m">
+        Subject: Finish setting up your NHS login
+      </h2>
 
       <p class="nhsuk-body">
         Dear {{ data.UserFirstName or 'Alex' }} {{ data.UserLastName or 'Taylor' }},
@@ -47,7 +47,7 @@ Finish setting up your NHS login
 
       <p class="nhsuk-body">You need to confirm your details.</p>
 
-      <p class="nhsuk-body">This invitation will expire in 7 days.</p>
+      <p class="nhsuk-body">This invitation will expire in <strong>7 days</strong>.</p>
       
       <a href="../existing-uplift/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
       <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://settings.login.nhs.uk/</a></p>
