--- a/app/views/discovery-2023/existing-uplift/steps.html
+++ b/app/views/discovery-2023/existing-uplift/steps.html
@@ -50,13 +50,13 @@
                       </div>	
                     </li> 
                     <li class="service-access__item completed"> 
-                      <h3 class="service-access__item__title ticked" style="font-size:18px">Matched to GP record</h3>
+                      <h3 class="service-access__item__title ticked" style="font-size:18px">Your GP has confirmed your identity</h3>
                       <div class="service-access__item__desc">	
                       </div>	
                     </li> 
 
                     <li class="service-access__item active">
-                      <h3 class="service-access__item__title">Confirm your details</h3>
+                      <h3 class="service-access__item__title">Verify your account</h3>
                       <div class="service-access__item__desc">
                         <p>Your GP has confirmed your identity, to add this to your account continue and enter your password.</p>
                         <p class="nhsuk-body">You will also need to confirm your:
