Steps added in journey and content tweaks

--- a/app/views/discovery-2023/create-account/spinner-confirm.html
+++ b/app/views/discovery-2023/create-account/spinner-confirm.html
@@ -60,7 +60,7 @@ Confirming your details
 
 <script>
   setTimeout(function(){
-    window.location.href='success';
+    window.location.href='steps-completed';
 }, 2500);
 </script>
 
