--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -35,7 +35,7 @@
           <p class="nhsuk-body">If you cannot remember your password you can <a href="/nhslogin/login/check-your-email">reset it</a>.</p>
         <div>
 
-          {% if data.userIs === 'p5' %}
+          {% if data.p5 === 'trueNow' %}
 
     
           <button data-redirect="confirm-my-details" class="nhsuk-button full-width" type="submit" id="button--save">
