--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -59,7 +59,7 @@ Enter the 6 digit security code
           <input class="nhsuk-input nhsuk-input--width-10" id="securityCodes" name="code" type="number" aria-describedby="securityCodes" autocomplete="off" pattern="[0-9]*" value="" style="margin-bottom: 8px;">
         </div>
 
-        <a href="steps?userIs=p5" role="button" draggable="false" class="nhsuk-button">
+        <a href="steps-finish-set-up?p5=trueNow" role="button" draggable="false" class="nhsuk-button">
           Continue
         </a>
 
