--- a/app/views/discovery-2023/create-account/otp.html
+++ b/app/views/discovery-2023/create-account/otp.html
@@ -28,8 +28,6 @@ Enter the 6 digit security code
     
         <h1 class="nhsuk-heading-l">Enter the 6 digit security code</h1>
 
-        <p class="nhsuk-body">We need to confirm it's you before you access your NHS login.</p>
-
         <p class="nhsuk-body">We have sent a text to <strong>•••••••8209</strong>.</p>
 
         <p class="nhsuk-body">This is the phone number that is registered with your GP surgery.</p>
@@ -59,7 +57,7 @@ Enter the 6 digit security code
           <input class="nhsuk-input nhsuk-input--width-10" id="securityCodes" name="code" type="number" aria-describedby="securityCodes" autocomplete="off" pattern="[0-9]*" value="" style="margin-bottom: 8px;">
         </div>
 
-        <a href="steps?userIs=p5" role="button" draggable="false" class="nhsuk-button">
+        <a href="steps-finish-set-up" role="button" draggable="false" class="nhsuk-button">
           Continue
         </a>
 
