--- a/app/views/discovery-2023/create-account/steps-who.html
+++ b/app/views/discovery-2023/create-account/steps-who.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-Confirm your details
+Next steps
 {% endblock %}
 
 {% block content %}
@@ -25,21 +25,22 @@ Confirm your details
                 </li> 
 
                 <li class="service-access__item active">
-                  <h3 class="service-access__item__title">Verify your account</h3>
+                  <p class="service-access__item__title__text__leftandright"><b>Next step</b></p>
+                  <h3 class="service-access__item__title">Get security code</h3>
                   <div class="service-access__item__desc">
-                    <p>Your GP has confirmed your identity, to add this to your account continue and enter your password.</p>
+                    <p>We need to confirm it's you before you access your NHS login.</p>
                   </div>
                   <form method="POST">
                     <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Continue</button>
                   </form>
-              <!-- {% if data.p5active === 'off' %}
-              <li class="service-access__item active">	
-                <p class="service-access__item__title__text__leftandright"><strong>Next step</strong></p>
-                  <h3 class="service-access__item__title">Prove who you are</h3>
+              </li>
+              <li class="service-access__item active">
+                  <p class="service-access__item__title__text__leftandright"><b>Last step</b></p>
+                  <h3 class="service-access__item__title">Finish setting up your NHS login</h3>
                   <div class="service-access__item__desc">
-                    <p>You will need to send a photo of your ID and a recording of your face. This helps us match you to your NHS record and ensures that only you have access to your health information.</p>
+                    <p>Enter a password to finish setting up.</p>
                   </div>
-              {% endif %} -->
+              </li>
             </ol>
           
           </div>
