--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -20,6 +20,23 @@
         Your GP has recommended that you set up an NHS login so you can access a health service or app.
       </p>
 
+      <p class="nhsuk-body">This means you can do things like: 
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>
+            view your GP health record 
+          </li>
+          <li>
+            manage appointments 
+          </li>
+          <li>
+            order repeat prescriptions 
+          </li>
+          <li>
+            download your NHS Covid Pass for travel abroad 
+          </li>          
+        </ul>
+      </p>
+
       <h2 class="nhsuk-heading-m">
         To set up your account
       </h2>
@@ -28,7 +45,7 @@
         We need to send a 6 digit security code to the mobile phone number you used to register with your GP.
       </p>
 
-      <p class="nhsuk-body">You will also need to confirm your details.</p>
+      <p class="nhsuk-body">You will also need to create a password.</p>
 
       <p class="nhsuk-body">This invitation will expire in <strong>7 days</strong>.</p>
 
