--- a/app/views/discovery-2023/existing-uplift/spinner-set-up.html
+++ b/app/views/discovery-2023/existing-uplift/spinner-set-up.html
@@ -60,7 +60,7 @@ Checking details
 
 <script>
   setTimeout(function(){
-    window.location.href='otp';
+    window.location.href='steps-who';
 }, 2500);
 </script>
 
