--- a/app/views/discovery-2023/existing-uplift/steps.html
+++ b/app/views/discovery-2023/existing-uplift/steps.html
@@ -1,83 +1,37 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  Confirm your details
+Next steps
 {% endblock %}
 
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      {% if data.userIs === 'p0' %}
 
-      <form action="login-enter-password" method="post" class="form">
+
+
+      <form action="otp" method="post" class="form">
         <fieldset class="nhsuk-fieldset">
-
-      {% endif %}
-      {% if data.userIs === 'p5' %}
-
-      <form action="confirm-my-details" method="post" class="form">
-        <fieldset class="nhsuk-fieldset">
-
-      {% endif %}
           
         
           <div class="service-access-wrapper">
             <ol class="service-access">
-                {% if data.userIs === 'p0' %}
 
                 <li class="service-access__item completed"> 
-                  <h3 class="service-access__item__title ticked" style="font-size:18px">You have created an account</h3>
+                  <h3 class="service-access__item__title ticked" style="font-size:18px">Your GP has confirmed your identity</h3>
                   <div class="service-access__item__desc">	
                   </div>	
                 </li> 
 
                 <li class="service-access__item active">
-                  <h3 class="service-access__item__title">Confirm your details</h3>
+                  <h3 class="service-access__item__title">Verify your account</h3>
                   <div class="service-access__item__desc">
                     <p>Your GP has confirmed your identity, to add this to your account continue and enter your password.</p>
                   </div>
                   <form method="POST">
                     <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Continue</button>
                   </form>
-
-                {% endif %}
-                {% if data.userIs === 'p5' %}
-
-                    <li class="service-access__item completed"> 
-                      <h3 class="service-access__item__title ticked" style="font-size:18px">You have created an account</h3>
-                      <div class="service-access__item__desc">	
-                      </div>	
-                    </li> 
-                    <li class="service-access__item completed"> 
-                      <h3 class="service-access__item__title ticked" style="font-size:18px">Your GP has confirmed your identity</h3>
-                      <div class="service-access__item__desc">	
-                      </div>	
-                    </li> 
-
-                    <li class="service-access__item active">
-                      <h3 class="service-access__item__title">Verify your account</h3>
-                      <div class="service-access__item__desc">
-                        <p>Your GP has confirmed your identity, to add this to your account continue and enter your password.</p>
-                        <p class="nhsuk-body">You will also need to confirm your:
-                          <ul class="nhsuk-list nhsuk-list--bullet">
-                            <li>
-                              name
-                            </li>
-                            <li>
-                              date of birth
-                            </li>
-                            <li>
-                              NHS number
-                            </li>
-                          </ul>
-                        </p>
-                      </div>
-                      <form method="POST">
-                        <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Continue</button>
-                      </form>
-
-                {% endif %}
               <!-- {% if data.p5active === 'off' %}
               <li class="service-access__item active">	
                 <p class="service-access__item__title__text__leftandright"><strong>Next step</strong></p>
