Confirm details error and confluence link update

--- a/app/views/discovery-2023/existing-uplift/confirm-my-details.html
+++ b/app/views/discovery-2023/existing-uplift/confirm-my-details.html
@@ -8,7 +8,8 @@ Confirm your details
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds nhsuk-u-margin-bottom-4">
 
-    <form method="post" action="spinner-confirm">
+    <form method="post">
+    <!--<form method="post" action="spinner-confirm">-->
 
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend">
