--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,7 +38,7 @@
               Provisioning will get it's own error codes to send back or be shared with GP staff.
             </p>
             <ol class="nhsuk-contents-list__list">
-              <li class="nhsuk-contents-list__item"><a href="https://nhsd-confluence.digital.nhs.uk/display/NL/Provisioning+Journey+1+-+Errors" target="_blank">Error table on Confluence</a></li>
+              <li class="nhsuk-contents-list__item"><a href="https://nhsd-confluence.digital.nhs.uk/display/NL/Provisioning+Journey+1+-+Responses%2C+errors+and+emails" target="_blank">Error table on Confluence</a></li>
             </ol>
 
             <h3>User journey</h3>
