--- a/app/views/discovery-2023/error/partial-details-match.html
+++ b/app/views/discovery-2023/error/partial-details-match.html
@@ -29,7 +29,7 @@
                 Name
               </td>
               <td class="nhsuk-summary-list__value">
-                {{ data['firstName'] or 'Alex' }} {{ data['middleName'] }} {{ data['lastName'] or 'Smith' }}
+                {{ data['firstName'] or 'Alex' }} {{ data['middleName'] }} {{ data['lastName'] or 'Taylor' }}
               </td>
           
             </tr>
