--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -28,11 +28,7 @@ Enter the 6 digit security code
     
         <h1 class="nhsuk-heading-l">Enter the 6 digit security code</h1>
 
-        <p class="nhsuk-body">We need to confirm it's you before you access your NHS login.</p>
-
         <p class="nhsuk-body">We have sent a text to <strong>•••••••8209</strong>.</p>
-
-        <p class="nhsuk-body">This is the phone number that is registered with your GP surgery.</p>
 
         <details class="nhsuk-details">
           <summary class="nhsuk-details__summary">
@@ -65,6 +61,7 @@ Enter the 6 digit security code
 
         <div class="nhsuk-inset-text">
           <span class="nhsuk-u-visually-hidden">Information: </span>
+          <p>This is the phone number that is registered with your GP surgery.</p>
           <p>If you do not recognise this phone number or do not have access to your phone, you will need to update your records with your GP.</p>
         </div>
 
