--- a/app/views/discovery-2023/existing-uplift/steps-completed.html
+++ b/app/views/discovery-2023/existing-uplift/steps-completed.html
@@ -47,20 +47,20 @@ Next steps
                   <h3 class="service-access__item__title">You have set up an NHS login</h3>
                   <div class="service-access__item__desc">
                   
-                  <p>
-                    You have passed our checks and can now use your NHS login to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>, or <a hre="https://www.nhs.uk/">NHS website</a>.
+                  <p style="font-size:18px">
+                    You have passed our checks and can now use your NHS login to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>, or <a href="https://www.nhs.uk/">NHS website</a>.
                   </p>
-                  <p>
+                  <p style="font-size:18px">
                     You can also use the service your GP has recommended and other digital health and care services.
                   </p>
 
 
-                  <p>
+                  <p style="font-size:18px">
                     This includes:
                   </p>
 
                   <p class="nhsuk-body">
-                    <ul class="nhsuk-list nhsuk-list--bullet">
+                    <ul class="nhsuk-list nhsuk-list--bullet" style="font-size:18px">
                       <li>
                         health and wellbeing services
                       </li>
@@ -79,19 +79,18 @@ Next steps
                     </ul>
                   </p>
 
-                  <div class="nhsuk-action-link">
                     <a class="nhsuk-action-link__link" href="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">
                       <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
                       </svg>
-                      <span class="nhsuk-action-link__text">Where you can use your NHS login</span>
+                      <span class="nhsuk-action-link__text nhsuk-heading-s">Where you can use your NHS login</span>
                     </a>
                   </div>
 
-                  <h2 class="nhsuk-heading-m">Help with NHS login</h2>
+                  <h3 class="nhsuk-heading-s">Help with NHS login</h3>
                   <p>
-                    <ul class="nhsuk-list nhsuk-list--bullet">
+                    <ul class="nhsuk-list nhsuk-list--bullet" style="font-size:18px">
                       <li>
                         To change your NHS login details and password or delete your NHS login if you no longer want to use it, <a href="https://settings.login.nhs.uk/">visit settings</a>
                       </li>
