--- a/app/views/discovery-2023/create-account/otp.html
+++ b/app/views/discovery-2023/create-account/otp.html
@@ -30,8 +30,6 @@ Enter the 6 digit security code
 
         <p class="nhsuk-body">We have sent a text to <strong>•••••••8209</strong>.</p>
 
-        <p class="nhsuk-body">This is the phone number that is registered with your GP surgery.</p>
-
         <details class="nhsuk-details">
           <summary class="nhsuk-details__summary">
             <span class="nhsuk-details__summary-text">
@@ -63,6 +61,7 @@ Enter the 6 digit security code
 
         <div class="nhsuk-inset-text">
           <span class="nhsuk-u-visually-hidden">Information: </span>
+          <p>This is the phone number that is registered with your GP surgery.</p>
           <p>If you do not recognise this phone number or do not have access to your phone, you will need to update your records with your GP.</p>
         </div>
 
