--- a/app/views/discovery-2023/email/success-uplift.html
+++ b/app/views/discovery-2023/email/success-uplift.html
@@ -11,29 +11,48 @@
       <h1 class="nhsuk-fieldset__legend--l">
        You now have an NHS login
       </h1>
+                  
+      <p>
+        You have passed our checks and can now use your NHS login to access the: 
+      </p>
+        <ol>
+          <li>
+            <p>NHS App<a href="https://www.nhsapp.service.nhs.uk/login">https://www.nhsapp.service.nhs.uk/login</a></p>
+          </li>
+          <li>
+            <p>NHS website<a href="https://www.nhs.uk/">https://www.nhs.uk/</a></p>
+          </li>
+        </ol>
 
       <p>
-        You have passed our checks and can now use your NHS login to access the NHS App, or NHS website and do things like:
+        You can also use the service your GP has recommended and other digital health and care services.
+      </p>
+
+      <p>
+        This includes:
       </p>
 
       <p class="nhsuk-body">
         <ul class="nhsuk-list nhsuk-list--bullet">
           <li>
-            view your GP health record 
+            health and wellbeing services
           </li>
           <li>
-            manage appointments 
+            maternity and child health services
           </li>
           <li>
-            order repeat prescriptions 
+            online pharmacies
           </li>
           <li>
-            download your NHS Covid Pass for travel abroad 
+            online and video consultation services
+          </li>  
+          <li>
+            patient access services
           </li>          
         </ul>
       </p>
       <p>
-        To find out more about the websites and apps you can access with NHS login, visit: <a class="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/</a>
+        To find out more about the where you can use your NHS login, visit: <a class="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/</a>
       </p>
 
       <h2 class="nhsuk-heading-m">Help with NHS login</h2>
