--- a/app/views/discovery-2023/error/expired.html
+++ b/app/views/discovery-2023/error/expired.html
@@ -40,11 +40,11 @@ Your invite has expired
       </p>
       
       <p>
-      If you received your invite more than 7 days ago, it has expired and will no longer work. If you want to set up an NHS login, you will need to ask your GP to send a new invite. When they send you a new one, delete the previous email and respond to the invite from the new email.
+      If you received your invite more than <strong>7 days ago</strong>, it has expired and will no longer work. If you want to set up an NHS login, you will need to ask your GP to send a new invite. When they send you a new one, delete the previous email and respond to the invite from the new email.
       </p>
 
       <p>
-      If you have already set up an NHS login you can use it to access health and care apps or websites, or wherever you see the NHS login button. 
+      If you have already set up an NHS login you can use it to access health and care apps or websites, including access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>, or <a href="https://www.nhs.uk/">NHS website</a>.
       </p>
 
       <p>Reference: <b>CID1102</b></p>
