--- a/app/views/discovery-2023/existing-uplift/steps-who.html
+++ b/app/views/discovery-2023/existing-uplift/steps-who.html
@@ -29,6 +29,7 @@ Next steps
                   <h3 class="service-access__item__title">Get security code</h3>
                   <div class="service-access__item__desc">
                     <p>We need to confirm it's you before you access your NHS login.</p>
+                    <p>We will send a 6 digit security code to the mobile phone number you used to register with your GP.</p>
                   </div>
                   <form method="POST">
                     <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Continue</button>
