--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -49,9 +49,17 @@
 
       <p class="nhsuk-body">This invitation will expire in <strong>7 days</strong>.</p>
 
-      <a href="../create-account/spinner-set-up" target="_blank" class="nhsuk-button">Set up your NHS login</a>
-      <p><a href="../create-account/spinner-set-up" target="_blank">https://settings.login.nhs.uk/</a></p>
+      {% if data.error === 'trueNow' %} 
+
+      <a href="../create-account/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <p><a href="../create-account/spinner-set-up?error=trueNow" target="_blank">https://settings.login.nhs.uk/</a></p>
+
+      {% else %}
+
+      <a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <p><a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank">https://settings.login.nhs.uk/</a></p>
       
+      {% endif %}
       <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
 
     </div>
