--- a/app/views/discovery-2023/error/expired.html
+++ b/app/views/discovery-2023/error/expired.html
@@ -34,8 +34,8 @@ Your invite has expired
 
             <p>This could be because:
           <ul class="nhsuk-list nhsuk-list--bullet">
-            <li>you received it more than 7 days ago</li>
-            <li>you have already set up an NHS login</li>
+            <li>you received it more than <strong>7 days</strong> ago</li>
+            <li>you have already set up an NHS login account</li>
           </ul>
       </p>
       
