--- a/app/views/discovery-2023/existing-uplift/spinner-set-up.html
+++ b/app/views/discovery-2023/existing-uplift/spinner-set-up.html
@@ -57,6 +57,15 @@ Checking details
   </div>
 </div>
 
+{% if data.error === 'trueNow' %} 
+
+<script>
+  setTimeout(function(){
+    window.location.href='../error/expired';
+}, 2500);
+</script>
+
+{% else %}
 
 <script>
   setTimeout(function(){
@@ -64,6 +73,7 @@ Checking details
 }, 2500);
 </script>
 
+{% endif %}
 
 
 
