--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,6 +58,7 @@
             </ol>
             <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
             <ul>
+              <li><a href="discovery-2023/research/march-2023" target="_blank">Research link</a></li>
               <li><a href="https://nhsd-confluence.digital.nhs.uk/pages/viewpage.action?pageId=564757512" target="_blank">Confluence</a></li>
               <li><a href="https://app.mural.co/invitation/mural/nhsdigital8118/1675178807706?sender=u6ebbd4fffc5f2b3022c14380&key=c4127b72-59f9-4a04-afe6-a59d177d3250" target="_blank">Mural service map</a></li>
               <li><a href="https://app.mural.co/invitation/mural/nhsdigital8118/1677258706065?sender=u6ebbd4fffc5f2b3022c14380&key=8776c6f2-9ec7-49f9-8550-523cbd9c909a" target="_blank">Mural R&D</a></li>
