Email reminder content on completed screen

--- a/app/views/discovery-2023/create-account/steps-completed.html
+++ b/app/views/discovery-2023/create-account/steps-completed.html
@@ -42,9 +42,11 @@ Next steps
                       You have passed our checks and can now use your NHS login to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>, or <a href="https://www.nhs.uk/">NHS website</a>.
                     </p>
                     <p style="font-size:18px">
+                      We will email you to confirm you have set up your NHS login account.
+                    </p>
+                    <p style="font-size:18px">
                       You can also use the service your GP has recommended and other digital health and care services.
                     </p>
-
 
                     <p style="font-size:18px">
                       This includes:
