Removed the error param on the non error journeys

--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -54,8 +54,8 @@ Finish setting up your NHS login
 
       {% else %}
 
-      <a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank">https://settings.login.nhs.uk/</a></p>
+      <a href="../existing-uplift/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://settings.login.nhs.uk/</a></p>
       
       {% endif %}
 
