--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -56,8 +56,8 @@
 
       {% else %}
 
-      <a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank">https://settings.login.nhs.uk/</a></p>
+      <a href="../existing-uplift/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://settings.login.nhs.uk/</a></p>
       
       {% endif %}
       <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
