--- a/app/views/discovery-2023/research/march-2023.html
+++ b/app/views/discovery-2023/research/march-2023.html
@@ -39,7 +39,7 @@
       
       <hr>
 
-          <h2 class="nhsuk-heading-m">User scenario 1</h2>
+          <h2 class="nhsuk-heading-m">User scenario 1 - New account</h2>
           <div class="nhsuk-action-link">
             <a class="nhsuk-action-link__link" href="../email/invite-new-account">
               <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
@@ -61,7 +61,7 @@
 
           <br>
 
-          <h2 class="nhsuk-heading-m">User scenario 2</h2>
+          <h2 class="nhsuk-heading-m">User scenario 2 - Existing account</h2>
           <div class="nhsuk-action-link">
             <a class="nhsuk-action-link__link" href="../email/existing-account-uplift">
               <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
