Tab title renames

--- a/app/views/discovery-2023/create-account/steps-completed.html
+++ b/app/views/discovery-2023/create-account/steps-completed.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-Next steps
+You have set up an NHS login
 {% endblock %}
 
 {% block content %}
