--- a/app/views/discovery-2023/research/march-2023.html
+++ b/app/views/discovery-2023/research/march-2023.html
@@ -12,7 +12,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS login
+  NHS login - Research March 2023
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
