--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-  Provisioning
+  NHS login - Provisioning
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
