Get code title, completed steps and expired content

--- a/app/views/discovery-2023/create-account/steps-finish-set-up.html
+++ b/app/views/discovery-2023/create-account/steps-finish-set-up.html
@@ -24,7 +24,7 @@ Next steps
                   </div>	
                 </li> 
                 <li class="service-access__item completed"> 
-                  <h3 class="service-access__item__title ticked" style="font-size:18px">Get security code</h3>
+                  <h3 class="service-access__item__title ticked" style="font-size:18px">Get a security code</h3>
                   <div class="service-access__item__desc">	
                   </div>	
                 </li> 
