--- a/app/views/discovery-2023/create-account/steps-who.html
+++ b/app/views/discovery-2023/create-account/steps-who.html
@@ -26,7 +26,7 @@ Next steps
 
                 <li class="service-access__item active">
                   <p class="service-access__item__title__text__leftandright"><b>Next step</b></p>
-                  <h3 class="service-access__item__title">Get security code</h3>
+                  <h3 class="service-access__item__title">Get a security code</h3>
                   <div class="service-access__item__desc">
                     <p>We need to confirm it's you before you access your NHS login.</p>
                     <p>We will send a 6 digit security code to the mobile phone number you used to register with your GP.</p>
