--- a/app/views/discovery-2023/error/expired.html
+++ b/app/views/discovery-2023/error/expired.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-Your invite has expired
+Your invitation to set up an NHS login has expired
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -29,22 +29,22 @@ Your invite has expired
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>Your invite has expired</h1>  
+      <h1>Your invitation to set up an NHS login has expired</h1>  
 
 
-            <p>This could be because:
-          <ul class="nhsuk-list nhsuk-list--bullet">
-            <li>you received it more than <strong>7 days</strong> ago</li>
-            <li>you have already set up an NHS login account</li>
-          </ul>
+      <p>This could be because:
+      <ul class="nhsuk-list nhsuk-list--bullet">
+        <li>you received it more than <strong>7 days ago</strong></li>
+        <li>you have already set up an NHS login account</li>
+      </ul>
       </p>
       
       <p>
-      If you received your invite more than <strong>7 days ago</strong>, it has expired and will no longer work. If you want to set up an NHS login, you will need to ask your GP to send a new invite. When they send you a new one, delete the previous email and respond to the invite from the new email.
+        If you received your invitation more than <strong>7 days ago</strong>, it has expired and will no longer work. If you want to set up an NHS login, you will need to ask your GP to send a new invitation.
       </p>
 
       <p>
-      If you have already set up an NHS login you can use it to access health and care apps or websites, including access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>, or <a href="https://www.nhs.uk/">NHS website</a>.
+        If you have already set up an NHS login, you can use it to access health and care apps or websites, such as the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>, or <a href="https://www.nhs.uk/">NHS website</a>.
       </p>
 
       <p>Reference: <b>CID1102</b></p>
