--- a/app/views/discovery-2023/create-account/steps-completed.html
+++ b/app/views/discovery-2023/create-account/steps-completed.html
@@ -24,7 +24,7 @@ You have set up an NHS login
                   </div>	
                 </li> 
                 <li class="service-access__item completed"> 
-                  <h3 class="service-access__item__title ticked" style="font-size:18px">Get security code</h3>
+                  <h3 class="service-access__item__title ticked" style="font-size:18px">Get a security code</h3>
                   <div class="service-access__item__desc">	
                   </div>	
                 </li> 
@@ -42,7 +42,7 @@ You have set up an NHS login
                       You have passed our checks and can now use your NHS login to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>, or <a href="https://www.nhs.uk/">NHS website</a>.
                     </p>
                     <p style="font-size:18px">
-                      We will email you to confirm you have set up your NHS login account.
+                      We have sent you an email to confirm you have finished setting up your NHS login.
                     </p>
                     <p style="font-size:18px">
                       You can also use the service your GP has recommended and other digital health and care services.
